<resources>
    <string name="app_name">SignUp</string>
    <string name="registeration">Registeration</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
