<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_Layout_Color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registeration"
            android:textColor="@color/title_Text_Color"
            android:textSize="24sp"
            android:paddingBottom="12dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/image_Background_Color"
                android:clickable="true"
                android:padding="1dp"
                android:tooltipText="Click here to take photo" />
            <TextView
                android:id="@+id/txtPhoto"
                android:layout_alignTop="@+id/imgPhoto"
                android:layout_alignLeft="@+id/imgPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Photo"
                android:textColor="@color/title_Text_Color"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingTop="16dp"
            android:paddingLeft="6dp"
            android:layout_marginBottom="10dp"
            android:background="@color/inputText_Background_Color"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingLeft="6dp"
            android:layout_marginBottom="10dp"
            android:background="@color/inputText_Background_Color"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingTop="16dp"
            android:paddingLeft="6dp"
            android:layout_marginBottom="10dp"
            android:background="@color/inputText_Background_Color"/>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:background="@color/button_Background_Color"
            android:layout_marginTop="12dp"/>

    </LinearLayout>
</ScrollView>
